--- a/aspnet-get-started/Web.config
+++ b/aspnet-get-started/Web.config
@@ -13,6 +13,7 @@
   <system.web>
     <compilation debug="true" targetFramework="4.8" />
     <httpRuntime targetFramework="4.8" />
+    <httpCookies sameSite="Strict" requireSSL="true" httpOnlyCookies="true" />
   </system.web>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
